--- a/HeiMa/01.webpack-base/package.json
+++ b/HeiMa/01.webpack-base/package.json
@@ -17,7 +17,9 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^3.4.0",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^1.1.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
